src/js/components/ui.css
@import "../../css/config.css";
@import "../../css/type.css";
@import "../../css/libs/animate.css";

.ui{
  @mixin fadeIn 1s;

  &--layered{
    display: flex;
    flex-direction: column;

    max-width: var(--maximum-viewport-width);
    min-height: 100vh;
    margin: 0 auto;

    & .ui__content{
      display: flex;
      align-items: center;
      min-height: 80vh;
    }

    & .ui__section{
      margin-bottom: 0;
      min-height: 0;

      &:nth-child(even){
        background-color: transparent;
      }
    }

    & .ui__header{
      min-height: 10vh;
    }

    & .ui__nav{
      visibility: visible;
    }
  }

  &__nav{
    visibility: hidden;
  }

  &__container{
    position: relative;
  }

  &__section{
    display: flex;
    align-items: center;
    min-height: 90vh;

    padding: 5rem var(--horizontal-padding);

    &:nth-child(even)
    {
      background-color: color(var(--secondary-color) alpha(15%));
    }

    &--exit{
      position: absolute;
      top:0;
    }
  }

  &__footer{
    min-height: 10vh;
  }
}

